Thumbnails Reclassified as Cards + Spacing Fixes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,20 +2,22 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
-.thumbnail img {
-	width: 100%;
-}
-
-.thumbnail {
-	padding: 0;
-}
-
-.thumbnail .caption-full{
-	padding: 9px;
-}
-
 .delete-form {
 	display: inline;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 10vw;
+    object-fit: cover;
+}
+
+nav {
+	margin-bottom: 16px;
+}
+
+.jumbotron {
+	margin-bottom: 16px;
 }
 
 /* .navButton:hover {
